--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,7 @@ nosetests.xml
 coverage.xml
 *,cover
 .hypothesis/
+.pytest_cache/
 
 # Translations
 *.mo
@@ -93,7 +94,6 @@ ENV/
 
 .vscode/
 .idea/
-build/
 node_modules/
 typings/
 npm-debug.log
@@ -104,3 +104,5 @@ yarn.lock
 builds/
 yarn-error.log
 coverage
+*.swp
+*~
