--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "checkDepsVersions": "npm-check --skip-unused -u",
         "test": "jest --coverage",
         "lint": "npm run lint:ts",
-        "lint:ts": "tslint src/**/*.ts{,x}",
+        "lint:ts": "tslint client/**/*.ts{,x}",
         "postinstall": "npm run build:dist"
     },
     "author": "Ali Soleimani <alisol911@gmail.com>",
@@ -31,6 +31,8 @@
     "devDependencies": {
         "@types/assertion-error": "1.1.0",
         "@types/classnames": "2.2.8",
+        "@types/enzyme": "^3.9.3",
+        "@types/enzyme-adapter-react-16": "^1.0.5",
         "@types/history": "4.7.2",
         "@types/jest": "24.0.13",
         "@types/lodash": "4.14.133",
@@ -47,6 +49,8 @@
         "devtron": "1.4.0",
         "echo-cli": "1.0.8",
         "enzyme": "3.9.0",
+        "enzyme-adapter-react-16": "^1.13.2",
+        "enzyme-to-json": "^3.3.5",
         "eslint": "5.16.0",
         "eslint-plugin-react": "7.13.0",
         "extract-text-webpack-plugin": "3.0.2",
@@ -57,6 +61,7 @@
         "jest": "24.8.0",
         "jest-cli": "24.8.0",
         "jest-enzyme": "7.0.2",
+        "jest-fetch-mock": "^2.1.2",
         "jquery": "^3.4.1",
         "optimize-css-assets-webpack-plugin": "5.0.1",
         "popper.js": "^1.15.0",
@@ -69,7 +74,7 @@
         "serve-static": "1.14.1",
         "stats-webpack-plugin": "0.7.0",
         "style-loader": "0.23.1",
-        "ts-jest": "24.0.2",
+        "ts-jest": "^24.0.2",
         "ts-loader": "6.0.2",
         "tslint": "5.17.0",
         "typescript": "3.5.1",
@@ -81,24 +86,5 @@
     },
     "resolutions": {
         "@types/tapable": "1.0.0"
-    },
-    "jest": {
-        "moduleNameMapper": {
-            "^image![a-zA-Z0-9$_-]+$": "GlobalImageStub",
-            "^[./a-zA-Z0-9$_-]+\\.png$": "RelativeImageStub"
-        },
-        "setupTestFrameworkScriptFile": "./node_modules/jest-enzyme/lib/index.js",
-        "transform": {
-            "^.+\\.(ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js",
-            "^.+\\.(css|less|scss|styl)$": "<rootDir>/src/framework/transforms/css.js",
-            "^.+\\.(svg)$": "<rootDir>/src/framework/transforms/img.js"
-        },
-        "testRegex": "(/(__tests__|__spec__)/.*|\\.(test|spec))\\.(ts|tsx)$",
-        "moduleFileExtensions": [
-            "ts",
-            "tsx",
-            "js",
-            "json"
-        ]
     }
 }
