finalize enzyme integration

--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
         "server:dev": "webpack-dev-server --config webpack/webpack.dev.config.js --host 0.0.0.0",
         "server:dist": "webpack-dev-server --config webpack/webpack.dist.config.js --host 0.0.0.0",
         "checkDepsVersions": "npm-check --skip-unused -u",
-        "test": "jest --coverage",
+        "test": "jest",
+        "coverage": "jest --coverage",
         "lint": "npm run lint:ts",
         "lint:ts": "tslint client/**/*.ts{,x}",
-        "postinstall": "npm run build:dist"
+        "postinstall": "npm test; npm run build:dist"
     },
     "author": "Ali Soleimani <alisol911@gmail.com>",
     "license": "MIT",
@@ -39,6 +40,7 @@
         "@types/node": "12.0.4",
         "@types/react": "16.8.19",
         "@types/webpack": "4.4.32",
+        "async-wait-until": "^1.2.4",
         "awesome-typescript-loader": "5.2.1",
         "basscss": "8.1.0",
         "basscss-addons": "1.0.0",
@@ -60,6 +62,7 @@
         "html-webpack-plugin": "3.2.0",
         "jest": "24.8.0",
         "jest-cli": "24.8.0",
+        "jest-dom": "^3.4.0",
         "jest-enzyme": "7.0.2",
         "jest-fetch-mock": "^2.1.2",
         "jquery": "^3.4.1",
@@ -69,7 +72,9 @@
         "postcss-import": "12.0.1",
         "postcss-loader": "3.0.0",
         "react-router-dom": "5.0.0",
+        "react-scripts": "^3.0.1",
         "react-test-renderer": "16.8.6",
+        "react-transition-group": "^4.1.0",
         "reselect": "4.0.0",
         "serve-static": "1.14.1",
         "stats-webpack-plugin": "0.7.0",
