--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
         "postcss-cssnext": "3.1.0",
         "postcss-import": "12.0.1",
         "postcss-loader": "3.0.0",
+        "react-responsive-modal": "^4.0.1",
         "react-router-dom": "5.0.0",
         "react-scripts": "^3.0.1",
         "react-test-renderer": "16.8.6",
